update segment button

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,32 +6,23 @@
 </ion-header>
 
 <ion-content padding>
-    <ion-segment [(ngModel)]="SegmentDriver" color="primary" (ionChange)="segmentChanged($event)">
-        <ion-segment-button value="My-Pool">
-          My Pool
-        </ion-segment-button>
+  <ion-segment [(ngModel)]="SegmentDriver" color="primary">
+    <ion-segment-button value="My-Pool">
+      My Pool
+    </ion-segment-button>
 
-        <ion-segment-button value="Pending">
-          Pending
-        </ion-segment-button>
-      </ion-segment>
-    
-  
+    <ion-segment-button value="Pending">
+      Pending
+    </ion-segment-button>
+  </ion-segment>
 
-<ion-grid  [ngSwitch]="'SegmentDriver'" style="height:100%">
-  <ion-row justify-content-center align-items-center style="height:100%">
-      <ion-card>
-          <ion-card-content>
-            <ion-item style="text-align: center">
-                <p> You have no rides planned at the moment.</p>
-                <ion-icon  ios="ios-map" md="md-map" id="PictureNoRides"></ion-icon>
-                <p>create new trip</p>
-                <ion-icon name="add-circle" id="AddRides"></ion-icon>
-            </ion-item>   
-          </ion-card-content>
-        </ion-card>
-  </ion-row>
-</ion-grid>
+  <div [ngSwitch]="SegmentDriver">
+    <ion-list *ngSwitchCase="'My-Pool'">
+      <box-driver></box-driver>
+    </ion-list>
 
-  
+    <ion-list *ngSwitchCase="'Pending'"> 
+      Pending test
+    </ion-list>
+  </div>
 </ion-content>
